# chat

./: Makefile  README.org  chat.opam  chat.opam.locked  dune-project
docs/: demo.webm  layer_architecture.excalidraw  progress_notes.org  testing_notes.org
lib/: cli.ml  cli.mli  client.ml  client.mli  cmd_client.ml  cmd_server.ml  console.ml  console.mli  display.ml  display.mli  dune  frame.ml  frame.mli  frame_reader.ml  frame_reader.mli  server.ml  server.mli  session.ml  session.mli  session_meta.ml  session_meta.mli
test/: dune  test_chat.ml  test_e2e.ml  test_frame.ml  test_frame_reader.ml  test_session.ml
test/helpers/: dune  e2e_harness.ml  input_types.ml  test_helpers.ml  test_input.ml  test_payload.ml
